testsuite/good/AtrributeDeclarationMultiple3.flux
type AtrributeDeclarationMultiple3 {

}
attributes {
   var int x, y, z;
}