testsuite/bad/MultipleAssignmentTypes.flux
// multiple attributes declared in the same statement must have the same type

type MultipleAssignmentTypes {

}
attributes {
   int x, float y;
}